--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="keywords" content="art, depth, perception, art with depth, moving, images, pixelart, depth perception, depthperception, contact">
+		<meta name="keywords" content="depth, perception, depthperception, moving, images, depth perception, 3d, image, board, image board, contact, contact form, message, feedback">
 		<meta name="author" content="Damjan Roškar">
 		<title>Depth Perception - Contact</title>
 		
