--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<meta name="keywords" content="art, depth, perception, art with depth, moving, images, pixelart, depth perception, depthperception">
-		<meta name="description" content="A collection of art that shows depth when moved over with a mouse">
+		<meta name="keywords" content="depth, perception, depthperception, moving, images, depth perception, 3d, image, board, image board">
+		<meta name="description" content="An image board with depth">
 		<meta name="author" content="Damjan Roškar">
 		<title>Depth Perception</title>
 		
