--- a/submit.html
+++ b/submit.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="keywords" content="art, depth, perception, art with depth, moving, images, pixelart, depth perception, depthperception, submit" />
+		<meta name="keywords" content="depth, perception, depthperception, moving, images, depth perception, 3d, image, board, image board, submit, submission, user submission" />
 		<meta name="author" content="Damjan Roškar" />
 		<title>Depth Perception - Submit</title>
 		
