--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,8 @@
 			</tr>
 			<tr>
 				<td>
-					<div id="messageRecievedFeedback">
-						<p>Message recieved, thanks!</p>
+					<div id="messageReceivedFeedback">
+						<p>Message received, thanks!</p>
 					</div>
 				</td>
 			</tr>
